--- a/src/index.html
+++ b/src/index.html
@@ -20,25 +20,47 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>. -->
     <div class="row">
-      <div id="os-logo"><img src="manjaro.svg" alt="" /></div>
+      <div><img id="os-logo" src="" alt="" /></div>
       <div id="system-info">
         <p class="title">
           <span id="username" class="green"></span>@<span
             id="hostname"
             class="green"
           ></span>
-        <p class="new-line"><span class="green">OS:</span> <span id="os"></span></p>
-        <p class="new-line"><span class="green">Host:</span> <span id="host"></span></p>
-        <p class="new-line"><span class="green">Kernel:</span> <span id="kernel"></span></p>
-        <p class="new-line"><span class="green">Uptime:</span> <span id="uptime"></span></p>
-        <p class="new-line"><span class="green">Packages:</span> <span id="packages"></span></p>
-        <p class="new-line"><span class="green">Shell:</span> <span id="shell"></span></p>
-        <p class="new-line"><span class="green">Resolution:</span> <span id="resolution"></span></p>
-        <p class="new-line"><span class="green">DE:</span> <span id="de"></span></p>
-        <p class="new-line"><span class="green">WM:</span> <span id="wm"></span></p>
-        <p class="new-line"><span class="green">CPU:</span> <span id="cpu"></span></p>
-        <p class="new-line"><span class="green">GPU:</span> <span id="gpu"></span></p>
-        <p class="new-line"><span class="green">Memory:</span> <span id="memory"></span></p>
+        </p>
+
+        <p class="new-line">
+          <span class="green">OS:</span> <span id="os"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">Host:</span> <span id="host"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">Kernel:</span> <span id="kernel"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">Uptime:</span> <span id="uptime"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">Packages:</span> <span id="packages"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">Shell:</span> <span id="shell"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">Resolution:</span> <span id="resolution"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">DE:</span> <span id="de"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">WM:</span> <span id="wm"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">CPU:</span> <span id="cpu"></span>
+        </p>
+        <p class="new-line">
+          <span class="green">Memory:</span> <span id="memory"></span>
         </p>
       </div>
     </div>
